--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: perl
 sudo: false
+
 perl:
   - "5.8"
   - "5.10"
@@ -8,3 +9,6 @@ perl:
   - "5.18"
   - "5.26"
   - "5.28"
+
+before_install:
+  - cpanm Starch
